--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "postinstall": "npx prisma generate"
   },
   "dependencies": {
-    "@prisma/client": "^4.12.0",
+    "@prisma/client": "^4.13.0",
     "@types/node": "18.15.3",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
@@ -19,11 +19,11 @@
     "chart.js": "^4.2.1",
     "cheerio": "^1.0.0-rc.12",
     "eslint": "8.36.0",
-    "eslint-config-next": "13.2.4",
+    "eslint-config-next": "^13.3.4",
     "js-cookie": "^3.0.1",
     "jsonwebtoken": "^9.0.0",
     "nanoid": "^4.0.2",
-    "next": "13.2.4",
+    "next": "^13.3.4",
     "react": "18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
@@ -39,7 +39,7 @@
     "@types/jsonwebtoken": "^9.0.1",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
-    "prisma": "^4.12.0",
+    "prisma": "^4.13.0",
     "tailwindcss": "^3.2.7"
   }
 }
